@@ -1,5 +1,5 @@
-always_built_SUBDIRS = desktop-links new-mouse-properties \
-	new-screensaver-properties new-background-properties \
+always_built_SUBDIRS = desktop-links  \
+	 new-background-properties \
         theme-switcher new-sound-properties new-bell-properties \
 	new-ui-properties url-properties gnome-edit-properties \
 	session-properties wm-properties new-keyboard-properties \
