@@ -1,3 +1,8 @@
+2001-03-13  Chema Celorio  <chema@celorio.com>
+
+	* capplets/gnome-edit-properties/gnome-edit-properties.c:
+	s/gEdit/gedit
+
 2001-01-29  Fatih Demir	<kabalak@gmx.net>
 
 	* idl/.cvsignore & libcapplet/.cvsignore: Added these
